final before branch

--- a/src/stage.index.html
+++ b/src/stage.index.html
@@ -140,7 +140,7 @@
                     <section id="resume-left-side">
                         <div class="hide-on-small-only show-on-large show-on-medium">
                             <div class="card-panel #ff7043 deep-orange z-depth-1">
-                                <h3 class="white-text center-align">Contact</h3>
+                                <h3 class="white-text center-align remove-margin-top-bottom">Contact</h3>
                             </div>
                         </div>
                         <!-- CANDIDATE CONTACT -->
@@ -187,7 +187,7 @@
                         <!-- CANDIDATE SKILLS -->
                         <article id="candidate-skills">
                             <div class="card-panel f4511e deep-orange darken-2 z-depth-1">
-                                <h3 class="white-text center-align">Skills</h3>
+                                <h3 class="white-text center-align remove-margin-top-bottom">Skills</h3>
                             </div>
                             <div class="card-panel #fbe9e7 deep-orange lighten-5 z-depth-1">
                                 <div class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="85%">
@@ -221,7 +221,7 @@
                             </div>
                         </article>
                         <div class="card-panel #e64a19 deep-orange darken-3 z-depth-1">
-                            <h3 class="white-text center-align">Education</h3>
+                            <h3 class="white-text center-align remove-margin-top-bottom">Education</h3>
                         </div>
                         <!-- CANDIDATE EDUCATION -->
                         <article id="candidate-education">
@@ -584,7 +584,7 @@
 </script>
 <script>
     function sendMail() {
-        var link = "mailto:me@example.com"
+        var link = "mailto:sajjad@withpulp.com"
                 + "?cc=" + escape(document.getElementById('email').value)
                 + "&subject=" + escape(document.getElementById('name').value) + ' contacted you from cv.sajjad.nyc'
                 + "&body=" + escape(document.getElementById('message').value)
