--- a/src/stage.index.html
+++ b/src/stage.index.html
@@ -7,7 +7,6 @@
     <!-- GOOGLE -->
     <meta name="description" content="Novelist, Artisan, Entrepreneur" />
     <meta name="keywords" content="QA, Quality Assurance, QA Analyst, Quality Assurrance Analyst, Quality Assurance Engineer, Automation Engineer, Release Engineer, Test Engineer, Software Engineer in Test, SDET" />
-
     <meta name="author" content="Sajjad Hossain" />
     <meta name="copyright" content="2015" />
     <meta name="application-name" content="http://cv.sajjad.nyc" />
@@ -323,7 +322,7 @@
                     <section id="resume-right-side">
                         <!-- CANDIDATE RESUME -->
                         <div class="card-panel #bf360c deep-orange darken-4">
-                            <h3 class="white-text center-align">Experience</h3>
+                            <h3 class="white-text center-align remove-margin-top-bottom">Experience</h3>
                         </div>
                         <article id="candidate-experience-withpulp">
                             <!-- WITHPULP -->
@@ -466,7 +465,7 @@
                                         <h4><span class="hide-on-med-and-up truncate">Amplify</span></h4>
                                         <p class="flow-text hide-on-med-and-up truncate">Automation Engineer</p>
                                         <div class="chip">
-                                            <i class="small material-icons disabled">schedule</i>
+                                            <i class="material-icons disabled">schedule</i>
                                             <span class="truncate">'13 TO '14</span>
                                         </div>
                                         <div class="chip">
@@ -505,7 +504,7 @@
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Close</a>
+                                            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Close</a>
                                         </div>
                                     </div>
                                 </div>
@@ -549,6 +548,16 @@
                             <input value="" placeholder="bwayne@wayneenterprises.com" id="email" type="email" class="validate contact-form-values white-text">
                             <label for="email"><span class="contact-form-labels">Email*</span></label>
                         </div>
+                    </div>
+                    <div class="row">
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s12">
+                                    <textarea id="textarea1" class="materialize-textarea"></textarea>
+                                    <label for="textarea1">Textarea</label>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
